fix(STN-507): Fix Spacing Regressions (#682)
* fix(STN-507): carousel and page hero spacing

* fix(STN-507): decrease accordion spacing

* chore(STN-507): fix events link for backstop.js

* fix(STN-507): remove margin top for carousel in hero area

* fix(STN-507): spacing around js pager button

* refactor(STN-507): remove !important where possible, comment where not possible

* doc(STN-507): comment update

* chore(STN-507): compiled CSS

--- a/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.general.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.general.scss
@@ -24,6 +24,7 @@
   padding-top: hb-calculate-rems(40px);
 }
 
+// The !important rules are needed to override default drupal settings
 .ptype-hs-text-area,
 .ptype-hs-priv-text-area,
 .ptype-hs-accordion,
@@ -31,6 +32,8 @@
 .ptype-hs-hero-image,
 .ptype-hs-spotlight,
 .ptype-hs-banner,
+.ptype-hs-carousel,
+.field-hs-page-hero,
 .ptype-hs-row,
 .ptype-hs-view {
   width: 100%;
@@ -44,4 +47,13 @@
 
 .views-row:not(:last-child) {
   margin-bottom: hb-spacing-width() !important;
+}
+
+.ptype-hs-accordion {
+  margin-bottom: hb-spacing-width(xxs) !important;
+
+  .hs-paragraph-style--well &:last-child,
+  .hs-paragraph-style--well-full-width &:last-child {
+    margin-bottom: hb-spacing-width() !important;
+  }
 }
