--- a/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
@@ -3,7 +3,7 @@
   &--well,
   &--well-full-width {
     @include hb-well;
-    padding: 0 hb-spacing-width() 0 !important;
+    padding: 0 hb-spacing-width();
     overflow: auto;
 
     .counted-items-2.field-hs-row-components > .paragraph-item,
